// Copyright 2016 Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package istio.mixer.v1.config.descriptor;

import "mixer/v1/config/descriptor/value_type.proto";

// An object that describes the schema of a `MonitoredResource`. A
// `MonitoredResource` is used to define a type of resources for
// monitoring purpose. For example, the monitored resource "VM" refers
// to virtual machines, which requires 3 attributes "owner", "zone",
// "name" to uniquely identify a specific instance. When reporting
// a metric against a monitored resource, the metric attributes will
// be used to associate the right value with the right instance,
// such as memory usage of a VM.
message MonitoredResourceDescriptor {
  // Required. The name of this descriptor.
  string name = 1;

  // Optional. A detailed description of the monitored resource descriptor that
  // might be used in documentation.
  string description = 2;

  // Labels represent the dimensions that uniquely identify this monitored
  // resource. At runtime expressions will be evaluated to provide values for
  // each label. Label names are mapped to expressions as part of aspect
  // configuration.
  map<string, ValueType> labels = 3;
}
